--- a/shortcuts.html
+++ b/shortcuts.html
@@ -169,6 +169,36 @@
                                     </td>
                                     <td>Aria selecton</td>
                                 </tr>
+                                <tr>
+                                    <td>
+                                        <kbd>Ctrl</kbd>+<kbd>D</kbd>
+                                    </td>
+                                    <td>Select next</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Up</kbd>
+                                    </td>
+                                    <td>New cursor above</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Down</kbd>
+                                    </td>
+                                    <td>New cursor bellow</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <kbd>F10</kbd>
+                                    </td>
+                                    <td>Sort selection</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <kbd>Shift</kbd>+<kbd>F10</kbd>
+                                    </td>
+                                    <td>Reverse sort selection</td>
+                                </tr>
                             </table>
                         </td>
                     </tr>
