--- a/settings.html
+++ b/settings.html
@@ -39,6 +39,20 @@
                 gap: 10px;
             }
 
+            .setting {
+                padding: 20px;
+                background-color: var(--background-color-2);
+                border-radius: 15px;
+                margin-bottom: 10px;
+            }
+
+            .setting.box {
+                padding: 0px 20px 0px 20px;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+            }
+
             @media screen and (max-width: 800px) {
                 .settings-body {
                     display: block;
@@ -59,11 +73,12 @@
                 <a href="#fonts">Fonts</a>
                 <a href="#editor">Editor</a>
                 <a href="#status_bar">Status Bar</a>
+                <a href="#data">My files</a>
             </nav>
             <div class="main-page">
                 <div>
                     <h3 id="theme">Theme</h3>
-                    <div style="display: flex; gap: 10px; align-items: center">
+                    <div class="setting" style="display: flex; gap: 10px; align-items: center; flex-wrap: wrap;">
                         <button class="ball" style="background-color: #ffffff; color: #3c3c3c" onclick="setSetting('theme', 'theme-light');loadSettings()">Light</button>
                         <button class="ball" style="background-color: #f5eacb; color: #4b3a25" onclick="setSetting('theme', 'theme-cream');loadSettings()">Cream</button>
                         <button class="ball" style="background-color: #303030; color: #dddddd" onclick="setSetting('theme', 'theme-dark');loadSettings()">Dark</button>
@@ -74,7 +89,7 @@
 
                 <div>
                     <h3 id="fonts">Fonts</h3>
-                    <div>
+                    <div class="setting">
                         <div>
                             <label>Editor font</label>
                             <input type="text" placeholder="Ubuntu Mono" id="fontEditor" oninput="setSetting('editorFont', this.value); loadSettings();" />
@@ -92,7 +107,7 @@
 
                 <div>
                     <h3 id="editor">Editor</h3>
-                    <div style="display: flex; flex-direction: column; gap: 5px">
+                    <div class="setting" style="display: flex; flex-direction: column; gap: 5px">
                         <div class="switch-wrapper">
                             <label class="switch">
                                 <input type="checkbox" id="editorLineNumbers" onchange="setSetting('editorLineNumbers', this.checked); location.reload()" />
@@ -112,7 +127,7 @@
 
                 <div>
                     <h3 id="status_bar">Status bar</h3>
-                    <div style="display: flex; flex-direction: column; gap: 5px">
+                    <div class="setting" style="display: flex; flex-direction: column; gap: 5px">
                         <div class="switch-wrapper">
                             <label class="switch">
                                 <input type="checkbox" id="statusShow" onchange="setSetting('statusShow', this.checked); loadSettings()" />
@@ -144,6 +159,51 @@
                             </div>
                         </div>
                     </div>
+
+                    <div>
+                    <h3 id="data">My files</h3>
+                    <div>
+                        <div class="setting box">
+                            <div>
+                                <h4>Export package</h4>
+                                <p>Export your notes as a zip file</p>
+                            </div>
+                            <div>
+                                <button class="text-button" onclick="exportBook();">Export</button>
+                            </div>
+                        </div>
+
+                        <div class="setting box">
+                            <div>
+                                <h4>Import package</h4>
+                                <p>Import files from a zip file</p>
+                            </div>
+                            <div>
+                                <button class="text-button" onclick="importBook();">Import</button>
+                            </div>
+                        </div>
+
+                        <div class="setting box">
+                            <div>
+                                <h4>Delete empty files</h4>
+                                <p>Delete all files without any text or meta.</p>
+                            </div>
+                            <div>
+                                <button class="text-button danger" onclick="deleteEmptyFiles();">Delete</button>
+                            </div>
+                        </div>
+
+                        <div class="setting box">
+                            <div>
+                                <h4>Replace with package</h4>
+                                <p>Import files from a zip file, replacing your files.</p>
+                            </div>
+                            <div>
+                                <button class="text-button danger" onclick="importDeleteBook();">Replace</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
