--- a/read.html
+++ b/read.html
@@ -20,6 +20,8 @@
         <div id="preview" class="preview on"></div>
 
         <script src="script/showdown.js"></script>
+        <script src="script/editorTools.js"></script>
+        <script src="script/prompts.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/lz-string@1.4.4/libs/lz-string.min.js"></script>
         <script>
             document.addEventListener("DOMContentLoaded", async () => {
