--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <kbd>Ctrl+,</kbd>
                         </button>
                         <hr />
-                        <button class="text-button" onmouseup="window.open('read.html?path=docs/index.md'); hideAllMenus()">Tutorial</button>
+                        <button class="text-button" onmouseup="window.open('https://github.com/flarom/cohesion/wiki'); hideAllMenus()">Tutorial</button>
                         <button class="text-button" onmouseup="showMessageFromFile('shortcuts.html', true, false, 600); hideAllMenus();">
                             Keyboard shortcuts
                             <kbd>Ctrl+?</kbd>
